--- a/LaTeX/thesis_1.tex
+++ b/LaTeX/thesis_1.tex
@@ -25,7 +25,7 @@
 
 \begin{document}
 \maketitle
-\twoppage{Maciej Wygoda}{172407}{rozdziału 1 ze strony 8, rozdziału 2 ze stron 9-14, rozdziału 3 ze stron 13-14, podrozdziałów 4.1, 4.2, 4.3 ze stron 15-17, podrozdziałów 4.4.3, 4.4.4 ze strony 18, podrozdziałów 4.4.6, 4.4.7, 4.5 ze strony 20, podrozdziału 4.7 ze strony 23}{Marcin Szadkowski}{167607}{rozdziału 1 ze strony 9, rozdziału 3 ze stron 15-16, podrozdziału 4.2 ze strony 17, podrozdziału 4.4.1 ze strony 19, podrozdziałów 4.4.2, 4.4.3 i 4.4.4 ze strony 20, podrozdziału 4.4.5 ze strony 21, podrozdziału 4.4.6 ze strony 22, podrozdziału 4.5 ze strony 22, podrozdziału 4.6 ze stron 23-26, rodziału 7 ze strony 29 }
+\twoppage{Maciej Wygoda}{172407}{rozdziału 1 ze strony 8, rozdziału 2 ze stron 9-14, rozdziału 3 ze stron 13-14, podrozdziałów 4.1, 4.2, 4.3 ze stron 15-17, podrozdziałów 4.4.3, 4.4.4 ze strony 18, podrozdziałów 4.4.6, 4.4.7, 4.5 ze strony 20, podrozdziału 4.7 ze strony 23}{Marcin Szadkowski}{167607}{rozdziału 1 ze strony 9, rozdziału 3 ze stron 15-16, podrozdziału 4.2 ze strony 17, podrozdziału 4.4.1 ze strony 19, podrozdziałów 4.4.2, 4.4.3 i 4.4.4 ze strony 20, podrozdziału 4.4.5 ze strony 21, podrozdziału 4.4.6 ze strony 22, podrozdziału 4.5 ze strony 22, podrozdziału 4.6 ze stron 23-26, rodziału 7 ze strony 29 oraz rozdziału 8 ze strony 30. }
 \statementpage
 \abstractpage
 {Implementacja sieciowej gry wideo z wykorzystaniem silnika Unreal Engine 4}
@@ -307,8 +307,8 @@ Niejednokrotnie trudności sprawiała niedokładna dokumentacja silnika lub nawe
 \chapter{Podsumowanie i wnioski}
 Tworzenie gier nie należy do zadań łatwych oraz szybkich. Podczas pracy nad projektem pojawiło się wiele dodatkowych problemów, przez co lista założonych na początku opcji gry musiała zostać skrócona. Jednym z nich był wysoki próg wejścia UE4. Przed rozpoczęciem pracy nad docelowym projektem, stworzonych zostało kilka mniejszych gier wzorowanych na przykładowych projektach z dokumentacji\cite{docs-tutorials}, które miały na celu zaznajomienie autorów z konwencjami, możliwościami silnika oraz systemem sieciowym. Czas tworzenia wydłużało dodatkowo scalanie podsystemów utworzonych przez poszczególnych autorów gry. Gry wideo są skomplikowanymi programami komputerowymi z duża liczbą połączeń pomiędzy danymi elementami gry. System zapisu jest na przykład zależny od wybranych opcji, który z koleji jest powiązany z klasą postaci. Ze względu na dużą liczbę powiązań pomiędzy różnymi elementami projektu, nawet najmniejsze zmiany mogły spowodować powstawanie różnorakich błędów, przez co dużą część czasu poświecono na proces testowania każdego nowo dodanego elementu.
 \newline \indent Silnik UE4 umożliwił stworzenie prostej sieciowej gry w stosunkowo niedługim czasie. Gra była zaprojektowana z myślą o jej dalszym rozwoju co wraz ze znajomością silnika UE4 pozwala na  sprawne dodawanie kolejnych elementów rozgrywki. Osiągniety efekt nie byłby możliwy bez wykorzystania profesjonalnych narzędzi takich jak UE4 czy Blender.
-
-
+ \chapter{Zawartość płyty}
+Na płycię znajdę się gotowa do uruchomienia wersja gry oraz folder zawierający wszystkie pliki stworzone na potrzeby projektu. W folderze znajdzie się między innymi kod źródłowy oraz pliki blueprintów zawierające większość stworzonej logiki gry. Na przykład blueprinty interfejsu użytkownika, postaci, interaktywnych elementów środowiska czy dostępnych umiejętności. W plikach znajdują się również {\em level} na którym toczy się rozgrywka, modele, animacje oraz dźwięki wykorzystane w grze.
 
 \begin{thebibliography}{9}
 
