fixed some typos

--- a/LaTeX/thesis_1.tex
+++ b/LaTeX/thesis_1.tex
@@ -305,10 +305,10 @@ Niejednokrotnie trudności sprawiała niedokładna dokumentacja silnika lub nawe
 \newline \indent Problem stanowiło również korzystanie z systemu kontroli wersji Git, ponieważ nie jest on przystosowany do obsługi plików innych niż tekstowe. Skutkiem jest utrudnione rozwiązywanie ewentualnych konfliktów powstałych w plikach związanych na przykład z blueprintami czy modelami. Problem ten będzie dotkliwszy dla większych zespołów.
 
 \chapter{Podsumowanie i wnioski}
-Tworzenie gier nie należy do zadań łatwych oraz szybkich. Podczas pracy nad projektem pojawiło się wiele dodatkowych problemów, przez co lista założonych na początku opcji gry musiała zostać skrócona. Jednym z nich był wysoki próg wejścia UE4. Przed rozpoczęciem pracy nad docelowym projektem, stworzonych zostało kilka mniejszych gier wzorowanych na przykładowych projektach z dokumentacji\cite{docs-tutorials}, które miały na celu zaznajomienie autorów z konwencjami, możliwościami silnika oraz systemem sieciowym. Czas tworzenia wydłużało dodatkowo scalanie podsystemów utworzonych przez poszczególnych autorów gry. Gry wideo są skomplikowanymi programami komputerowymi z duża liczbą połączeń pomiędzy danymi elementami gry. System zapisu jest na przykład zależny od wybranych opcji, który z koleji jest powiązany z klasą postaci. Ze względu na dużą liczbę powiązań pomiędzy różnymi elementami projektu, nawet najmniejsze zmiany mogły spowodować powstawanie różnorakich błędów, przez co dużą część czasu poświecono na proces testowania każdego nowo dodanego elementu.
+Tworzenie gier nie należy do zadań łatwych oraz szybkich. Podczas pracy nad projektem pojawiło się wiele dodatkowych problemów, przez co lista założonych na początku opcji gry musiała zostać skrócona. Jednym z nich był wysoki próg wejścia UE4. Przed rozpoczęciem pracy nad docelowym projektem, stworzonych zostało kilka mniejszych gier wzorowanych na przykładowych projektach z dokumentacji\cite{docs-tutorials}, które miały na celu zaznajomienie autorów z konwencjami, możliwościami silnika oraz systemem sieciowym. Czas tworzenia wydłużało dodatkowo scalanie podsystemów utworzonych przez poszczególnych autorów gry. Gry wideo są skomplikowanymi programami komputerowymi z duża liczbą połączeń pomiędzy danymi elementami gry. System zapisu jest na przykład zależny od wybranych opcji w interfejsie użytkownika, który z koleji jest powiązany z klasą postaci. Ze względu na dużą liczbę powiązań pomiędzy różnymi elementami projektu, nawet najmniejsze zmiany mogły spowodować powstawanie różnorakich błędów, przez co dużą część czasu poświecono na proces testowania każdego nowo dodanego elementu.
 \newline \indent Silnik UE4 umożliwił stworzenie prostej sieciowej gry w stosunkowo niedługim czasie. Gra była zaprojektowana z myślą o jej dalszym rozwoju co wraz ze znajomością silnika UE4 pozwala na  sprawne dodawanie kolejnych elementów rozgrywki. Osiągniety efekt nie byłby możliwy bez wykorzystania profesjonalnych narzędzi takich jak UE4 czy Blender.
  \chapter{Zawartość płyty}
-Na płycię znajdę się gotowa do uruchomienia wersja gry oraz folder zawierający wszystkie pliki stworzone na potrzeby projektu. W folderze znajdzie się między innymi kod źródłowy oraz pliki blueprintów zawierające większość stworzonej logiki gry. Na przykład blueprinty interfejsu użytkownika, postaci, interaktywnych elementów środowiska czy dostępnych umiejętności. W plikach znajdują się również {\em level} na którym toczy się rozgrywka, modele, animacje oraz dźwięki wykorzystane w grze.
+Na płycię znajduję się gotowa do uruchomienia wersja gry oraz folder zawierający wszystkie pliki stworzone na potrzeby projektu. W folderze znależć można między innymi kod źródłowy oraz pliki blueprintów zawierające większość stworzonej logiki gry. Na przykład blueprinty interfejsu użytkownika, postaci, interaktywnych elementów środowiska czy dostępnych umiejętności. W plikach znajdują się również {\em level} na którym toczy się rozgrywka, modele, animacje oraz dźwięki wykorzystane w grze. 
 
 \begin{thebibliography}{9}
 
