--- a/LaTeX/thesis_1.tex
+++ b/LaTeX/thesis_1.tex
@@ -25,7 +25,7 @@
 
 \begin{document}
 \maketitle
-\twoppage{Maciej Wygoda}{172407}{rozdziału 1 ze strony 8, rozdziału 2 ze stron 9-14, rozdziału 3 ze stron 13-14, podrozdziałów 4.1, 4.2, 4.3 ze stron 15-17, podrozdziałów 4.4.3, 4.4.4 ze strony 18, podrozdziałów 4.4.6, 4.4.7, 4.5 ze strony 20, podrozdziału 4.7 ze strony 23}{Marcin Szadkowski}{167607}{rozdziału 1 ze strony 9, rozdziału 3 ze stron 15-16, podrozdziału 4.2 ze strony 17, podrozdziału 4.4.1 ze strony 19, podrozdziałów 4.4.2, 4.4.3 i 4.4.4 ze strony 20, podrozdziału 4.4.5 ze strony 21, podrozdziału 4.4.6 ze strony 22, podrozdziału 4.5 ze strony 22, podrozdziału 4.6 ze stron 23-26, rodziału 7 ze strony 29 oraz rozdziału 8 ze strony 30. }
+\twoppage{Maciej Wygoda}{172407}{rozdziału 1 ze strony 9, rozdziału 2 ze stron 10-14, rozdziału 3 ze stron 15-16, podrozdziałów 4.1, 4.2, 4.3 ze stron 17-19, podrozdziałów 4.4.3, 4.4.4 ze strony 20, podrozdziałów 4.4.6, 4.4.7, 4.5 ze stron 22-23, podrozdziału 4.7 ze strony 25, rozdziału 5 ze strony 27, rozdziału 6 ze strony 28, rozdziału 8 ze strony 30.}{Marcin Szadkowski}{167607}{rozdziału 1 ze strony 9, podrozdziału 2.2 ze strony 10, rozdziału 3 ze stron 15-16, podrozdziału 4.2 ze strony 17, podrozdziału 4.4.1 ze strony 19, podrozdziałów 4.4.2, 4.4.3 i 4.4.4 ze strony 20, podrozdziału 4.4.5 ze strony 21, podrozdziału 4.4.6 ze strony 22, podrozdziału 4.5 ze strony 22, podrozdziału 4.6 ze stron 23-26, rodziału 7 ze strony 29 oraz rozdziału 8 ze strony 30. }
 \statementpage
 \abstractpage
 {Implementacja sieciowej gry wideo z wykorzystaniem silnika Unreal Engine 4}
@@ -52,7 +52,7 @@ Motywację stanowiły chęć zgłębienia technologii UE4, podjęcia techniczneg
 \label{czym-jest-silnik}
 Przez pojęcie ,,silnik gry`` rozumie się zbiór funkcji i narzędzi ({\em ang. framework}) wspierający tworzenie gier. Musi on oferować przede wszystkim renderowanie grafiki, dźwięku i obsługę sterowania. Współczesne silniki posiadają jednak znacznie więcej funkcji, a są to między innymi obsługa sieci, symulacja fizyki, edytory shaderów i efektów cząsteczkowych, produkcja przerywników filmowych oraz obsługa wielu platform na przykład komputerów, konsol czy urządzeń mobilnych takich jak smartfony. Większość silników dystrybuowana jest wraz z edytorem będacym graficznym interfejsem między programistą, a funkcjami silnika. Wykorzystanie jednego silnika do stworzenia wielu różnych gier znacząco skraca okres produkcji i stanowi powszechną w branży praktykę\cite{learning-unreal}\cite{wiki-game-engine}.
 \section{Język programowania}
-Jednym z problemów dziedziny tworzenia gier jest zebranie standardów technicznych,  które zostały by przyjęte przez całą branżę. Rozwój tej gałęzi informatyki jest napędzany przez duże firmy, które wprowadzają na rynek nowe technologie. Utrudnia to dobranie narzędzi, które można by wykorzystywać przez długi okres czasu\cite{perelki}. Ogólnodostępne standardy są ważne aby małe studia mogły obok dużych korporacji dokładać nowe rozwiązania. Z tych powodów do tworzenia w silniku UE4 wykorzystywany jest {\em C++}, który pod wieloma względami jest doskonałym narzędziem. Korzystanie z niego jest darmowe, przez co nawet małe studia mogą pozwolić sobie na jego użycie. Oprócz dostępności, narzędzia do tworzenia gier powinny łączyć w sobie wydajność oraz umożliwiać szybkie tworzenie projektów. Wszystkie te cechy łączy w sobie język {\em C++}\cite{szkolacpp}.
+Jednym z problemów dziedziny tworzenia gier jest zebranie standardów technicznych,  które zostały by przyjęte przez całą branżę. Rozwój tej gałęzi informatyki jest napędzany przez duże firmy, które wprowadzają na rynek nowe technologie. Utrudnia to dobranie narzędzi, które można by wykorzystywać przez długi czas\cite{perelki}. Ogólnodostępne standardy są ważne, aby małe studia mogły obok dużych korporacji dokładać nowe rozwiązania. Z tych powodów do tworzenia w silniku UE4 wykorzystywany jest {\em C++}, który pod wieloma względami jest doskonałym narzędziem. Korzystanie z niego jest darmowe, przez co nawet małe studia mogą pozwolić sobie na jego użycie. Oprócz dostępności, narzędzia do tworzenia gier powinny łączyć w sobie wydajność oraz umożliwiać szybkie tworzenie projektów. Wszystkie te cechy łączy w sobie język {\em C++}\cite{szkolacpp}.
 
 
 \section{Funkcje silnika Unreal Engine 4}
@@ -111,7 +111,7 @@ Styl rozgrywki zależy od gry i wizji jej autora, jednak istnieją pewne cechy w
 Stosowanie się do tej konwencji zaprezentowano w rozdziale \ref{implementacja} skupiającym się na implementacji gry ,,thesis\_1``.
 
 \section{Porównanie z innymi silnikami}
-Bezpośrednim konkurentem dla UE4 jest silnik {\em Unity}. Jego główne różnice w stosunku do UE4 to:
+Bezpośrednim konkurentem UE4 jest silnik {\em Unity}. Jego główne różnice w stosunku do UE4 to:
 \begin{itemize}
 \item Pełniejsza i precyzyjniejsza dokumentacja.
 \item Większa społeczność.
@@ -308,7 +308,8 @@ Niejednokrotnie trudności sprawiała niedokładna dokumentacja silnika lub nawe
 Tworzenie gier nie należy do zadań łatwych oraz szybkich. Podczas pracy nad projektem pojawiło się wiele dodatkowych problemów, przez co lista założonych na początku opcji gry musiała zostać skrócona. Jednym z nich był wysoki próg wejścia UE4. Przed rozpoczęciem pracy nad docelowym projektem, stworzonych zostało kilka mniejszych gier wzorowanych na przykładowych projektach z dokumentacji\cite{docs-tutorials}, które miały na celu zaznajomienie autorów z konwencjami, możliwościami silnika oraz systemem sieciowym. Czas tworzenia wydłużało dodatkowo scalanie podsystemów utworzonych przez poszczególnych autorów gry. Gry wideo są skomplikowanymi programami komputerowymi z duża liczbą połączeń pomiędzy danymi elementami gry. System zapisu jest na przykład zależny od wybranych opcji w interfejsie użytkownika, który z koleji jest powiązany z klasą postaci. Ze względu na dużą liczbę powiązań pomiędzy różnymi elementami projektu, nawet najmniejsze zmiany mogły spowodować powstawanie różnorakich błędów, przez co dużą część czasu poświecono na proces testowania każdego nowo dodanego elementu.
 \newline \indent Silnik UE4 umożliwił stworzenie prostej sieciowej gry w stosunkowo niedługim czasie. Gra była zaprojektowana z myślą o jej dalszym rozwoju co wraz ze znajomością silnika UE4 pozwala na  sprawne dodawanie kolejnych elementów rozgrywki. Osiągniety efekt nie byłby możliwy bez wykorzystania profesjonalnych narzędzi takich jak UE4 czy Blender.
  \chapter{Zawartość płyty}
-Na płycię znajduję się gotowa do uruchomienia wersja gry oraz folder zawierający wszystkie pliki stworzone na potrzeby projektu. W folderze znależć można między innymi kod źródłowy oraz pliki blueprintów zawierające większość stworzonej logiki gry. Na przykład blueprinty interfejsu użytkownika, postaci, interaktywnych elementów środowiska czy dostępnych umiejętności. W plikach znajdują się również {\em level} na którym toczy się rozgrywka, modele, animacje oraz dźwięki wykorzystane w grze. 
+Na płycie w katalogu PROJEKT znajdują się pliki projektowe UE4, w tym między innymi modele, animacje, dźwięki, {\em level}, na którym toczy się rozgrywka oraz elementy odpowiedzialne za całą logikę gry czyli około 35 blueprintów oraz kod źródłowy ośmiu klas. Ponadto umieszczono tam gotową do uruchomienia wersję gry.
+\newline \indent W katalogu DOKUMENTY umieszczono pracę dyplomową w formatach PDF i TEX oraz plik z tytułem, streszczeniem i słowami kluczowymi w formacie RTF. 
 
 \begin{thebibliography}{9}
 
@@ -316,10 +317,10 @@ Na płycię znajduję się gotowa do uruchomienia wersja gry oraz folder zawiera
 Joanna Lee, \textit{Learning Unreal Engine Game Development}, Packt Publishing, 2016
 
 \bibitem{perelki}
-Mark DeLoura, \textit{Perełki Programowania Gier, Vademecum profesjonalisty, Tom I, strony 17-21.} Helion, 2002
+Mark DeLoura, \textit{Perełki Programowania Gier, Vademecum profesjonalisty, Tom I, }strony 17-21. Helion, 2002
 
 \bibitem{szkolacpp}
-Stephen Prata, \textit{Język C++, Szkoła programowania, wydanie VI, strony 21-37.} Helion, 2013
+Stephen Prata, \textit{Język C++, Szkoła programowania, wydanie VI,} strony 21-37. Helion, 2013
 
 \bibitem{docs-ue4-features}
 \textit{Engine Features}. \url{https://docs.unrealengine.com/latest/INT/Engine/index.html} (dostęp 30.12.2017)
@@ -376,7 +377,6 @@ Justin Slick, \textit{What is Rigging? Preparing a 3D Model For Animation }. \ur
 
 
 \end{thebibliography}
-
 
 \beforelastpage
  \thispagestyle{empty} \newpage \null \thispagestyle{empty}
