--- a/LaTeX/thesis_1.tex
+++ b/LaTeX/thesis_1.tex
@@ -235,7 +235,7 @@ W celu dodania możliwości uniku, polegającego na gwałtownym odskoku postaci 
 	Grający ma możliwość wyboru postaci oraz zdolności w menu opcji, które pobiera informacje o klasach postaci i zdolnościach z {\em GameInfoInstance}. Aby zapobiec sytuacji, w której wybrana została zdolność przeznaczona dla innej postaci niż obecnie wybrana, interfejs aktualizuje listę dostępnych zdolności przy każdej zmianie klasy postaci. Po zaakceptowaniu zmian tablica zdolności trafia do {\em PlayerInfo} oraz pliku z zapisem gry. Przy dołączeniu do rozgrywki informacje te trafiają do {\em PlayerControllera} za pomocą funkcji {\em LoadPlayerInfo}, a stamtąd do {\em Charactera} poprzez funkcję {\em ABaseCharacter::LoadSkills()} przy każdym jego odrodzeniu.
 	\subsection{Elementy środowiska}
 W celu urozmaicenia rozgrywki opracowano kilka blueprintów. Oprócz dynamicznego oświetlenia czy tak zwanego {\em screenshake-a}, polegającego na drganiu kamery na przykład podczas wybuchów, dodano element, który miał na celu skupienie potyczki pomiędzy graczami w jednym miejscu. Tym elementem jest ognisko (rys. \ref{gameplay1}), przy którym gracze mogą uzupełnić swoje punkty zdrowia. Instancja ogniska, znajdująca się na serwerze, posiada sferę potrzebną do sprawdzania kolizji oraz listę postaci znajdujących się wewnątrz sfery. 
-Gdy odległość postaci od ogniska będzie mniejsza, niż promień sfery postać zostanie dodana do listy leczonych postaci i liczba jej punktów zdrowia zacznie wzrastać.
+Gdy odległość postaci od ogniska będzie mniejsza niż promień sfery, postać zostanie dodana do listy leczonych postaci i liczba jej punktów zdrowia zacznie wzrastać.
 Jeśli natomiast postać zanadto zbliży się do ogniska, dozna ,,oparzeń'', czyli zacznie tracić punkty zdrowia, zamiast je odzyskiwać.
 Oczywiście, zaimplementowane ognisko jest tylko przykładem. W analogiczny (i równie prosty) sposób można, za pomocą blueprintów,  dodać do gry inne elementy środowiska, wpływające w określony sposób na postacie, które w danym miejscu (i czasie) się znalazły.
 
